@@ -12,7 +12,7 @@
 
 <meta name="author" content="Jan Wijffels" />
 
-<meta name="date" content="2016-11-18" />
+<meta name="date" content="2016-12-27" />
 
 <title>Read in SAS data in parallel into Spark</title>
 
@@ -70,7 +70,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 
 <h1 class="title toc-ignore">Read in SAS data in parallel into Spark</h1>
 <h4 class="author"><em>Jan Wijffels</em></h4>
-<h4 class="date"><em>2016-11-18</em></h4>
+<h4 class="date"><em>2016-12-27</em></h4>
 
 
 
